--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,10 @@
 {
   "manifest_version": 3,
-  "name": "Spotlight Area",
-  "description": "Highlight selected area that you want to focus on",
-  "version": "1.0",
+  "name": "__MSG_pluginName__",
+  "description": "__MSG_pluginDesc__",
+  "version": "1.0.0",
   "minimum_chrome_version": "102",
+  "default_locale": "en",
   "icons": {
     "16": "images/icon-16.png",
     "32": "images/icon-32.png",
